2004-10-31  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Additional debug output.
	* backend/plustek-usbscan.c: Fixed a warning condition.

2004-10-30  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Bumped release number.
	* backend/plustek-usbscan.c: Fixed a bug in buffer calculation
	  for CIS devices.
	* doc/plustek/Plustek-USB.changes: Update.

2004-10-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/hp_rts88xx.desc: Moved HP 35xx
	  scanners to hp_rts88x backend. Updated status settings and URL
	  (from johanneshub@foni.net). Updated link to Tamarack 9600 project.
	* doc/descriptions-external/brother.desc: Seems to work in version
	  0.0.12 at least for one scanner.

2004-10-27  Ullrich Sigwanz <usigwanz@freesurf.ch>

	* backend/niash_core.c backend/niash.c: moving critical timing
          for backward movement to niash_core
          
2004-10-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved Plustek OpticFilm
	  7200 to genesys.desc (GL841 chipset). Added UMAX Astra 3400
	  (0x50 model). Added Xerox WorkCentre M15i.

2004-10-23 Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation.

2004-10-21  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/gt68xx.c backend/mustek.c: Remove an extra "in".
	* po/*.po: Fixing fuzzy translations (and some others).

2004-10-21  Rene Rebe <rene@exactcode.de>

	* backend/avision.h backend/avision.c: update of the scanner ID table,
	  wait_4_light bugfixes, fixed color packing, fixed 16bit modes
	  (especially for big-endian systems), avoid 16bit modes for default
	  modes, fixed gamma-table for some models as well as spelling on the
	  way

2004-10-20  Rene Rebe <rene@exactcode.de>

	* backend/avision.c doc/descriptions/avision.desc doc/sane-avision.man:
	  substituted my mail address and web-site to a new one - due to