@@ -207,8 +207,6 @@ enum GT68xx_Option
   OPT_ENHANCEMENT_GROUP,
   OPT_GAMMA_VALUE,
   OPT_THRESHOLD,
-  OPT_GAIN,
-  OPT_OFFSET,
 
   OPT_GEOMETRY_GROUP,
   OPT_TL_X,			/* top-left x */
