@@ -1,5 +1,5 @@
 :backend "gt68xx"
-:version "1.0-65"
+:version "1.0-66"
 :manpage "sane-gt68xx"
 :url "http://www.meier-geinitz.de/sane/gt68xx-backend/"
 :comment "Only the USB scanners mentioned below are supported. For other Mustek BearPaws, look at the Plustek and the MA-1509 backend."
